--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
 
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>ros1_bridge</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
